fixed map positioning within div so that full map is visible and no content is covered

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 #map { 
   position:absolute; 
-  top:100px; 
+  top:50px; 
   bottom:0px; 
   left: 0px;
   right: 50px;
